modelVersion input and output data
Co-authored-by: Gilles Dénervaud <gilles.denervaud@gmail.com>